@@ -72,3 +72,4 @@ The second one shows a dialog allowing to select an existing _State_ to associat
 The selected _State_ will be added to the diagram, not the new _ExhibitState_.
 - Handle _FlowConnectionUsage_ between _PortUsages_ in Interconnection View.
 A new edge tool allows to create a flow between two ports.
+- Add tools to set a _Feature_ as composite or reference.
