@@ -63,6 +63,7 @@ The second one shows a dialog allowing to select an existing _State_ to associat
 The selected _State_ will be added to the diagram, not the new _ExhibitState_.
 - https://github.com/eclipse-syson/syson/issues/587[#587] [interconnection-view] Handle _FlowConnectionUsage_ between _PortUsages_ in Interconnection View.
 A new edge tool allows to create a flow between two ports.
+- https://github.com/eclipse-syson/syson/issues/598[#598] [diagrams] Add tools to set a Feature as composite or reference.
 
 == v2024.7.0
 
